<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="horizontal"
        />

    <TextView
        android:id="@+id/asking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asking_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/asking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/deliver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver_text"
        android:textSize="11sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/choose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/happy_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/happy"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/deliver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/desc_happy"/>

    <TextView
        android:id="@+id/happy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/happy_text"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/happy_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/exciting_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/exciting"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/happy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/desc_exciting" />

    <TextView
        android:id="@+id/exciting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exciting_text"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/exciting_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/normal_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/normal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/exciting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/desc_normal" />

    <TextView
        android:id="@+id/normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal_text"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/normal_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/anxiety_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/anxiety"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/desc_anxiety" />

    <TextView
        android:id="@+id/anxiety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/anxiety_text"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/anxiety_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/angry_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/angry"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/anxiety"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/desc_angry" />

    <TextView
        android:id="@+id/angry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/angry_text"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/angry_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>